--- a/package.json
+++ b/package.json
@@ -2,17 +2,36 @@
   "name": "durable-workflow-prototype",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "deploy": "wrangler deploy",
-    "start": "wrangler dev",
-    "dev": "wrangler dev",
-    "typecheck": "tsc --noEmit",
+    "deploy": "pnpm run build && wrangler deploy",
+    "dev": "concurrently \"pnpm:dev:*\" --names \"worker,react\" --prefix-colors \"blue,magenta\"",
+    "dev:worker": "wrangler dev --port 8787",
+    "dev:react": "react-router dev",
+    "build": "react-router build",
+    "typecheck": "pnpm run cf-typegen && react-router typegen && tsc",
     "format": "prettier --write .",
     "cf-typegen": "wrangler types"
   },
+  "dependencies": {
+    "isbot": "^5.1.31",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router": "7.10.1"
+  },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.13.7",
+    "@react-router/dev": "7.10.1",
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/node": "^22",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "concurrently": "^9.2.1",
     "prettier": "^3.7.4",
-    "typescript": "^5.0.4",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^4.56.0"
   }
 }
