--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,33 @@
 {
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig.json to read more about this file */
-
-    /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "target": "es2024",
-    /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-    "lib": ["es2024"],
-    /* Specify what JSX code is generated. */
-    "jsx": "react-jsx",
-
-    /* Specify what module code is generated. */
-    "module": "es2022",
-    /* Specify how TypeScript looks up a file from a given module specifier. */
-    "moduleResolution": "node",
-    /* Enable importing .json files */
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
-
-    /* Allow JavaScript files to be a part of your program. Use the `checkJS` option to get errors from these files. */
     "allowJs": true,
-    /* Enable error reporting in type-checked JavaScript files. */
     "checkJs": false,
-
-    /* Disable emitting files from a compilation. */
+    "jsx": "react-jsx",
     "noEmit": true,
-
-    /* Ensure that each file can be safely transpiled without relying on other imports. */
     "isolatedModules": true,
-    /* Allow 'import x from y' when a module doesn't have a default export. */
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    /* Ensure that casing is correct in imports. */
     "forceConsistentCasingInFileNames": true,
-
-    /* Enable all strict type-checking options. */
     "strict": true,
-
-    /* Skip type checking all .d.ts files. */
     "skipLibCheck": true,
-    "types": ["./worker-configuration.d.ts"]
-  }
+    "baseUrl": ".",
+    "rootDirs": [".", "./.react-router/types"],
+    "paths": {
+      "~/*": ["./app/*"]
+    },
+    "types": ["vite/client", "./worker-configuration.d.ts"]
+  },
+  "include": [
+    "app/**/*",
+    "src/**/*",
+    "workflows/**/*",
+    "vite.config.ts",
+    "react-router.config.ts",
+    ".react-router/types/**/*"
+  ]
 }
