--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,6 +12,7 @@
   },
   "assets": {
     "directory": "build/client",
+    "not_found_handling": "single-page-application",
   },
   "workflows": [
     {
