--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.10.1",
+    "streamdown": "^2.3.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
