use oxlint to enforce app boundary

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev:worker": "wrangler dev --port 8787",
     "dev:react": "react-router dev",
     "build": "react-router build",
-    "typecheck": "pnpm run cf-typegen && react-router typegen && tsc && pnpm run typecheck:boundary",
-    "typecheck:boundary": "tsc -p tsconfig.app-boundary.json",
+    "typecheck": "pnpm run cf-typegen && react-router typegen && tsc",
     "test": "vitest run",
     "format": "oxfmt",
     "format:check": "oxfmt --check",
