--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,8 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "checkJs": false,
-    "jsx": "react-jsx",
-    "noEmit": true,
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "baseUrl": ".",
-    "rootDirs": [".", "./.react-router/types"],
-    "paths": {
-      "@relayjs": ["./src/sdk/client.ts"],
-      "@/*": ["./src/*"]
-    },
-    "types": ["vite/client", "./worker-configuration.d.ts"]
-  },
-  "include": [
-    "app/**/*",
-    "src/**/*",
-    "workflows/**/*",
-    "vite.config.ts",
-    "react-router.config.ts",
-    ".react-router/types/**/*"
+  "references": [
+    { "path": "packages/sdk" },
+    { "path": "packages/web" },
+    { "path": "apps/examples" }
   ],
-  "exclude": ["opensrc"]
+  "files": []
 }
