--- a/apps/examples/wrangler.jsonc
+++ b/apps/examples/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "relay-prototype",
+  "name": "relay-tools",
   "main": "src/index.ts",
   "compatibility_date": "2025-12-21",
   "observability": {
